tests/baselines/reference/parserStrictMode7.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts(2,3): error TS1100: Invalid use of 'eval' in strict mode.
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts(2,3): error TS2630: Cannot assign to 'eval' because it is a function.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts (2 errors) ====
    "use strict";
    ++eval;
      ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
      ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.